if(TARGET Qt::Quick)
    add_subdirectory(grue)
    add_subdirectory(maze)
#    add_subdirectory(qmlsensorgestures)
    add_subdirectory(qmlqtsensors)
    add_subdirectory(sensor_explorer)
#    add_subdirectory(shakeit)
    if(TARGET Qt::Svg)
        add_subdirectory(accelbubble)
    endif()
endif()
# if(TARGET Qt::Widgets)
#     add_subdirectory(sensorgestures)
# endif()
